<resources>
    <string name="app_name">Waves Of Food</string>
    <string name="waves_of_food">Waves Of Food</string>
    <string name="deliever_favorite_food">Deliever Favorite Food</string>
    <string name="design_by_nneatroots">Design By\nNeatRoots</string>
    <string name="enjoy_restaurant_quality_meals_nat_home">Enjoy Restaurant Quality Meals\nat Home</string>
    <string name="next">Next</string>
    <string name="deliver_favorite_food_color">Deliver Favorite Food</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="password">Password</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="or">or</string>
    <string name="continue_with">Continue With</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don’t Have Account?</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="name">Name</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="Details">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.\"</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="_7">$7</string>
    <string name="food_name">Food Name</string>
    <string name="popular">Popular</string>
    <string name="view_menu">View Menu</string>
    <string name="cart">Cart</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="proceed">Proceed</string>
    <string name="search">search</string>
    <string name="menu">Menu</string>
    <string name="previously_buy">Previously buy</string>
    <string name="recent_buy">Recent buy</string>
    <string name="buy_again">Buy Again</string>
    <string name="lorem_ipsum">lorem ipsum</string>
    <string name="address">Address</string>
    <string name="_123_street_ward_district">123 Street, Ward, District</string>
    <string name="email">Email</string>
    <string name="lorem_ipsum_gmail_com">lorem ipsum@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="_123456789">123456789</string>
    <string name="save_information">Save Information</string>
    <string name="notification">Notification</string>
    <string name="edit">Edit</string>
    <string name="payment_method">Payment Method</string>
    <string name="place_my_order">Place My Order</string>
    <string name="total_amount">Total Amount</string>
    <string name="congrats_n_your_order_placed">Congrats\n Your Order Placed</string>
    <string name="go_home">Go Home</string>
    <string name="short_description">Short description</string>
    <string name="ingredients">Ingredients</string>
    <string name="strowberry_ncream_nwheat">Strowberry\nCream\nwheat</string>
    <string name="received">Received</string>
    <string name="quantity">quantity</string>
    <string name="edit_profile">Edit Profile</string>

</resources>