<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dp_100_dsa"
        android:layout_height="@dimen/dp_100_dsa"
        android:layout_marginTop="@dimen/dp_32_dsa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8_dsa"
        android:fontFamily="@font/lato_bold_italic"
        android:text="@string/waves_of_food"
        android:textSize="@dimen/sp_34_dsa"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8_dsa"
        android:fontFamily="@font/lato_bold"
        android:text="@string/deliver_favorite_food_color"
        android:textColor="@color/textColor"
        android:textSize="@dimen/sp_14_dsa"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24_dsa"
        android:fontFamily="@font/lato_bold"
        android:text="@string/sign_up_here"
        android:textColor="@color/textColor"
        android:textSize="@dimen/sp_22_dsa"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="@dimen/dp_326_dsa"
        android:layout_height="@dimen/dp_56_dsa"
        android:layout_marginTop="@dimen/dp_32_dsa"
        android:background="@drawable/edittext_shape"
        android:drawableLeft="@drawable/user_02"
        android:drawablePadding="@dimen/dp_8_dsa"
        android:elevation="@dimen/dp_6_dsa"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/dp_8_dsa"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="@dimen/dp_326_dsa"
        android:layout_height="@dimen/dp_56_dsa"
        android:layout_marginTop="@dimen/dp_16_dsa"
        android:background="@drawable/edittext_shape"
        android:drawableLeft="@drawable/mail_02"
        android:drawablePadding="@dimen/dp_8_dsa"
        android:elevation="@dimen/dp_6_dsa"
        android:ems="10"
        android:hint="@string/email_or_phone_number"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/dp_8_dsa"
        app:layout_constraintEnd_toEndOf="@+id/edtName"
        app:layout_constraintStart_toStartOf="@+id/edtName"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="@dimen/dp_326_dsa"
        android:layout_height="@dimen/dp_56_dsa"
        android:layout_marginTop="@dimen/dp_16_dsa"
        android:background="@drawable/edittext_shape"
        android:drawableLeft="@drawable/lock_01"
        android:drawablePadding="@dimen/dp_8_dsa"
        android:elevation="@dimen/dp_6_dsa"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/dp_8_dsa"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16_dsa"
        android:fontFamily="@font/lato_italic"
        android:text="@string/or"
        android:textSize="@dimen/sp_12_dsa"
        app:layout_constraintEnd_toEndOf="@+id/edtPassword"
        app:layout_constraintStart_toStartOf="@+id/edtPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8_dsa"
        android:fontFamily="@font/lato_bold"
        android:text="@string/sign_up_with"
        android:textSize="@dimen/sp_16_dsa"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_facebook"
        android:layout_width="@dimen/dp_150_dsa"
        android:layout_height="@dimen/dp_58_dsa"
        android:layout_marginTop="@dimen/dp_16_dsa"
        android:background="@drawable/white_social"
        android:drawableLeft="@drawable/facebook"
        android:text="Facebook"
        android:paddingLeft="@dimen/dp_16_dsa"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/btn_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_google"
        android:layout_width="@dimen/dp_150_dsa"
        android:layout_height="@dimen/dp_58_dsa"
        android:layout_marginTop="@dimen/dp_16_dsa"
        android:background="@drawable/white_social"
        android:textAllCaps="false"
        android:paddingLeft="@dimen/dp_16_dsa"
        android:drawableLeft="@drawable/google"
        android:text="Google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_facebook"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_createAcc"
        android:layout_width="@dimen/dp_150_dsa"
        android:layout_height="@dimen/dp_58_dsa"
        android:background="@drawable/green_btn"
        android:layout_marginTop="@dimen/dp_16_dsa"
        android:text="@string/create_account"
        android:textSize="@dimen/sp_14_dsa"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_facebook" />

    <TextView
        android:id="@+id/txt_alreadyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16_dsa"
        android:textSize="@dimen/sp_14_dsa"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/textColor"
        android:text="@string/already_have_an_account"
        app:layout_constraintEnd_toEndOf="@+id/btn_createAcc"
        app:layout_constraintStart_toStartOf="@+id/btn_createAcc"
        app:layout_constraintTop_toBottomOf="@+id/btn_createAcc" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="@string/design_by_nneatroots"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="@dimen/sp_16_dsa"
        android:layout_marginBottom="@dimen/dp_16_dsa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>