<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100_dsa"
        android:layout_marginStart="@dimen/dp_8_dsa"
        android:layout_marginTop="@dimen/dp_8_dsa"
        android:layout_marginEnd="@dimen/dp_8_dsa"
        android:layout_marginBottom="@dimen/dp_8_dsa"
        app:cardCornerRadius="@dimen/dp_16_dsa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_buy_again"
                android:layout_width="@dimen/dp_64_dsa"
                android:layout_height="@dimen/dp_64_dsa"
                android:layout_marginStart="@dimen/dp_8_dsa"
                android:layout_marginTop="@dimen/dp_8_dsa"
                android:layout_marginBottom="@dimen/dp_8_dsa"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txt_buy_name_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16_dsa"
                android:fontFamily="@font/lato_regular"
                android:text="@string/food_name"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14_dsa"
                app:layout_constraintBottom_toTopOf="@+id/txt_buy_price_again"
                app:layout_constraintStart_toEndOf="@+id/img_buy_again"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_buy_price_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:text="@string/_7"
                android:textColor="@color/textColor"
                android:textSize="@dimen/sp_20_dsa"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txt_buy_name_again"
                app:layout_constraintTop_toBottomOf="@+id/txt_buy_name_again" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_buy_again"
                android:layout_width="@dimen/dp_100_dsa"
                android:layout_height="@dimen/dp_44_dsa"
                android:layout_marginEnd="@dimen/dp_32_dsa"
                android:text="@string/buy_again"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:fontFamily="@font/lato_bold"
                android:textSize="@dimen/sp_14_dsa"
                android:background="@drawable/addtocartshape"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>